force-app/main/default/objects/VASS_CallOut_Setting__mdt/VASS_CallOut_Setting__mdt.object-meta.xml
<CustomObject>
    <description>This Custom Settings store configurable parameters for external HTTP callouts performed from Salesforce. This object centralizes key settings such as endpoint URLs, HTTP methods, authentication types, headers, timeouts, and other request-related options to enable flexible and scalable integration management without the need to modify Apex code.</description>
    <label>CallOut Setting</label>
    <pluralLabel>CallOuts Settings</pluralLabel>
</CustomObject>