force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_ApiKey__c.field-meta.xml
<CustomField>
    <fullName>VASS_ApiKey__c</fullName>
    <description>ApiKey value from External Credentials, Eg: {!$Credential.External_Cred.Value}</description>
    <label>ApiKey</label>
    <length>255</length>
    <type>Text</type>
</CustomField>