force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_Domain__c.field-meta.xml
<CustomField>
    <fullName>VASS_Domain__c</fullName>
    <description>Specifies the base URL or domain of the external service used for API callouts, excluding the path and query parameters.</description>
    <label>Domain</label>
    <length>255</length>
    <type>Text</type>
</CustomField>