force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_HTTP_Method__c.field-meta.xml
<CustomField>
    <fullName>VASS_HTTP_Method__c</fullName>
    <description>Indicates the type of HTTP request to be used for the callout, such as GET, POST, PUT, or DELETE.</description>
    <label>HTTP Method</label>
    <length>10</length>
    <type>Text</type>
</CustomField>