force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_Is_Active__c.field-meta.xml
<CustomField>
    <fullName>VASS_Is_Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if this setting is currently in use.</description>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>