force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_Named_Credential__c.field-meta.xml
<CustomField>
    <fullName>VASS_Named_Credential__c</fullName>
    <description>Stores the name of the Salesforce Named Credential used to manage authentication and endpoint configuration for secure and authorized HTTP callouts.</description>
    <label>Named Credential</label>
    <length>255</length>
    <type>Text</type>
</CustomField>