force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_Path__c.field-meta.xml
<CustomField>
    <fullName>VASS_Path__c</fullName>
    <description>Defines the relative URI path of the API endpoint, typically used to identify the specific resource or action within the external service.</description>
    <label>Path</label>
    <length>255</length>
    <type>Text</type>
</CustomField>