force-app/main/default/objects/VASS_CallOut_Setting__mdt/fields/VASS_Timeout__c.field-meta.xml
<CustomField>
    <fullName>VASS_Timeout__c</fullName>
    <description>Specifies the maximum time (in milliseconds) to wait for a response from the external service before the request fails.</description>
    <label>Timeout</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>